// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feedMiddleware() > should detect correctly the feed item link 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Music releases</title>
        <link>undefined</link>
        <description>Get the latest music releases from artist you follow</description>
        <lastBuildDate>Thu, 01 Jan 1970 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>Music Follower</generator>
        <language>en</language>
        <copyright>Music Follower</copyright>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>bux</link>
            <guid>1</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bux\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>bux</link>
            <guid>3</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bux\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>foo</link>
            <guid>2</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bux\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>bix</link>
            <guid>3</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>bar</link>
            <guid>2</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>foo</link>
            <guid>1</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
    </channel>
</rss>"
`;

exports[`feedMiddleware() > should fallback to rss if no accepts header is sent 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Music releases</title>
        <link>undefined</link>
        <description>Get the latest music releases from artist you follow</description>
        <lastBuildDate>Thu, 01 Jan 1970 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>Music Follower</generator>
        <language>en</language>
        <copyright>Music Follower</copyright>
    </channel>
</rss>"
`;

exports[`feedMiddleware() > should send atom feed if it accepts \`application/atom+xml\` 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<feed xmlns=\\"http://www.w3.org/2005/Atom\\">
    <id>music_follower</id>
    <title>Music releases</title>
    <updated>1970-01-01T00:00:00.000Z</updated>
    <generator>Music Follower</generator>
    <subtitle>Get the latest music releases from artist you follow</subtitle>
    <rights>Music Follower</rights>
</feed>"
`;

exports[`feedMiddleware() > should send feed with elements for "application/atom+xml" 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<feed xmlns=\\"http://www.w3.org/2005/Atom\\">
    <id>music_follower</id>
    <title>Music releases</title>
    <updated>1970-01-01T00:00:00.000Z</updated>
    <generator>Music Follower</generator>
    <subtitle>Get the latest music releases from artist you follow</subtitle>
    <rights>Music Follower</rights>
    <entry>
        <title type=\\"html\\"><![CDATA[bar by foo]]></title>
        <id>4</id>
        <link href=\\"http://foo.bix\\"/>
        <updated>1970-01-01T00:00:01.500Z</updated>
        <summary type=\\"html\\"><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></summary>
    </entry>
    <entry>
        <title type=\\"html\\"><![CDATA[bar by foo]]></title>
        <id>3</id>
        <link href=\\"http://foo.bix\\"/>
        <updated>1970-01-01T00:00:01.000Z</updated>
        <summary type=\\"html\\"><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></summary>
    </entry>
    <entry>
        <title type=\\"html\\"><![CDATA[bar by foo]]></title>
        <id>2</id>
        <link href=\\"http://foo.bix\\"/>
        <updated>1970-01-01T00:00:00.500Z</updated>
        <summary type=\\"html\\"><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></summary>
    </entry>
</feed>"
`;

exports[`feedMiddleware() > should send feed with elements for "application/json" 1`] = `
"{
    \\"version\\": \\"https://jsonfeed.org/version/1\\",
    \\"title\\": \\"Music releases\\",
    \\"description\\": \\"Get the latest music releases from artist you follow\\",
    \\"items\\": [
        {
            \\"id\\": \\"4\\",
            \\"url\\": \\"http://foo.bix\\",
            \\"title\\": \\"bar by foo\\",
            \\"summary\\": \\"<img src=\\\\\\"http://foo.bix\\\\\\" />\\\\n      <h1>bar</h1><p>foo</p>\\\\n      <p>1970</p>\\",
            \\"date_modified\\": \\"1970-01-01T00:00:01.500Z\\"
        },
        {
            \\"id\\": \\"3\\",
            \\"url\\": \\"http://foo.bix\\",
            \\"title\\": \\"bar by foo\\",
            \\"summary\\": \\"<img src=\\\\\\"http://foo.bix\\\\\\" />\\\\n      <h1>bar</h1><p>foo</p>\\\\n      <p>1970</p>\\",
            \\"date_modified\\": \\"1970-01-01T00:00:01.000Z\\"
        },
        {
            \\"id\\": \\"2\\",
            \\"url\\": \\"http://foo.bix\\",
            \\"title\\": \\"bar by foo\\",
            \\"summary\\": \\"<img src=\\\\\\"http://foo.bix\\\\\\" />\\\\n      <h1>bar</h1><p>foo</p>\\\\n      <p>1970</p>\\",
            \\"date_modified\\": \\"1970-01-01T00:00:00.500Z\\"
        }
    ]
}"
`;

exports[`feedMiddleware() > should send feed with elements for "application/rss+xml" 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Music releases</title>
        <link>undefined</link>
        <description>Get the latest music releases from artist you follow</description>
        <lastBuildDate>Thu, 01 Jan 1970 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>Music Follower</generator>
        <language>en</language>
        <copyright>Music Follower</copyright>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>http://foo.bix</link>
            <guid>4</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:01 GMT</pubDate>
            <description><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>http://foo.bix</link>
            <guid>3</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:01 GMT</pubDate>
            <description><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
        <item>
            <title><![CDATA[bar by foo]]></title>
            <link>http://foo.bix</link>
            <guid>2</guid>
            <pubDate>Thu, 01 Jan 1970 00:00:00 GMT</pubDate>
            <description><![CDATA[<img src=\\"http://foo.bix\\" />
      <h1>bar</h1><p>foo</p>
      <p>1970</p>]]></description>
        </item>
    </channel>
</rss>"
`;

exports[`feedMiddleware() > should send json feed if it accepts \`application/json\` 1`] = `
"{
    \\"version\\": \\"https://jsonfeed.org/version/1\\",
    \\"title\\": \\"Music releases\\",
    \\"description\\": \\"Get the latest music releases from artist you follow\\",
    \\"items\\": []
}"
`;

exports[`feedMiddleware() > should send rss feed if it accepts \`application/rss+xml\` 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Music releases</title>
        <link>undefined</link>
        <description>Get the latest music releases from artist you follow</description>
        <lastBuildDate>Thu, 01 Jan 1970 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>Music Follower</generator>
        <language>en</language>
        <copyright>Music Follower</copyright>
    </channel>
</rss>"
`;

exports[`feedMiddleware() > should send rss feed if it accepts \`application/xml\` 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<rss version=\\"2.0\\">
    <channel>
        <title>Music releases</title>
        <link>undefined</link>
        <description>Get the latest music releases from artist you follow</description>
        <lastBuildDate>Thu, 01 Jan 1970 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>Music Follower</generator>
        <language>en</language>
        <copyright>Music Follower</copyright>
    </channel>
</rss>"
`;
